syntax = "proto3";

option java_package = "com.francotte.datastore_proto";
option java_multiple_files = true;

message UserInfo {
  bool connected = 1;
  User user = 2;
  string token = 3;
}


message User {
  int64 id = 1;
  string userName = 2;
  enum ConnectionMethod {
    EMAIL = 0;
    FACEBOOK = 1;
    GOOGLE = 2;
  }
  ConnectionMethod method = 3;
  string email = 4;
  string image = 5;
}