
syntax = "proto3";

import "com/francotte/datastore_proto/user_info.proto";

option java_package = "com.francotte.datastore_proto";
option java_multiple_files = true;

message PendingFavoriteAction {
  string recipeId = 1;
  bool desiredFavorite = 2;
  int64 createdAt = 3;
}

message UserPreferences {
  map<string, bool> favorites_ids = 2;
  UserInfo user_info = 3;
  map<string, PendingFavoriteAction> pendingFavorites = 4;
}